<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#263238">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="80dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#7B869B"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/email"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColorHint="#cccccc"
        android:textColor="#7B869B"
        android:maxLength="40"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_shape" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ellipsize="start"
        android:gravity="center"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:hint="@string/password"
        android:textColor="#7B869B"
        android:textColorHint="#cccccc"
        android:maxLength="20"
        android:maxLines="1"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/edit_text_shape"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:shadowRadius="5"
        android:background="@drawable/button_shape"/>

    </LinearLayout>
</ScrollView>